certificate alignment fixed

--- a/CUSTOR.EIC.API/src/app/components/certificate/certificate.component.scss
+++ b/CUSTOR.EIC.API/src/app/components/certificate/certificate.component.scss
@@ -75,7 +75,7 @@ header {
 }
 
 #sub-header > table > tbody > tr > td.dta-head {
-  border-bottom: 1px solid black !important;
+  border-bottom: 1px dotted black !important;
 }
 
 table > tbody > tr > td.a-header {
@@ -95,6 +95,9 @@ table > tbody > tr > td.a-header {
 }
 
 .c-subtitle {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
 }
 
 #TIN {
@@ -122,7 +125,7 @@ table tr:nth-child(2n-1) td {
   background: white;
 }
 
-table tr > td.t-header, .caption {
+.t-header {
   text-align: left !important;
   //color: #222d32;
   //font-weight: bold;
@@ -130,14 +133,14 @@ table tr > td.t-header, .caption {
   text-transform: capitalize !important;
 
   font-family: Nyala !important;
-  font-size: 15px !important;
-  font-weight: bold !important;
+  font-size: 14px !important;
+  font-weight: bolder !important;
   font-style: normal !important;
 }
 
 table tr > td.data {
-  border-bottom: 1px solid #CCC8AD !important;
-  font-size: 10px !important;
+  border-bottom: 1px dotted black !important;
+  font-size: 16px !important;
 }
 
 
@@ -154,7 +157,7 @@ table .desc {
 table td.unit,
 table td.qty,
 table td.total {
-  font-size: 10;
+  font-size: 13px;
 }
 
 table td, table th {
@@ -163,7 +166,14 @@ table td, table th {
 }
 
 #notices {
-  padding: 0px 20px !important;
+  padding: 0px 10px !important;
+}
+
+.notice {
+  color: #000000 !important;
+  font-family: Nyala !important;
+  font-size: 13px !important;
+  font-weight: lighter;
 }
 
 #investmentCapital .value {
@@ -193,4 +203,35 @@ nobr {
 table {
   border: none !important;
   border-spacing: 0px !important;
+}
+
+.value {
+  border-bottom: 1px dotted black !important;
+  text-transform: capitalize;
+  font-size: 16px !important;
+  font-family: Nyala !important;
+  text-align: center;
+
+}
+
+.caption {
+  text-align: left !important;
+  text-transform: capitalize !important;
+  font-family: Nyala !important;
+  font-size: 14px !important;
+  font-weight: bolder !important;
+  color: black;
+}
+
+.dta-head {
+  border-bottom: 1px dotted black !important;
+  color: #000000 !important;
+  font-family: Nyala !important;
+  font-size: 16px !important;
+}
+
+.s-head {
+  color: #000000 !important;
+  font-family: Nyala !important;
+  font-size: 16px !important;
 }
